[gd_scene load_steps=43 format=2]

[ext_resource path="res://Assets/Player/GUI/PauseMenu.png" type="Texture" id=1]
[ext_resource path="res://GUI/Fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GUI/Fonts/ButtonStyle.tres" type="StyleBox" id=3]
[ext_resource path="res://Menu/MainManu.gd" type="Script" id=4]
[ext_resource path="res://Assets/Menu/BackGround/menu4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Menu/BackGround/menu6.png" type="Texture" id=6]
[ext_resource path="res://Assets/Menu/BackGround/menu7.png" type="Texture" id=7]
[ext_resource path="res://Assets/Menu/BackGround/menu3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Menu/BackGround/menu8.png" type="Texture" id=9]
[ext_resource path="res://Assets/Menu/BackGround/menu9.png" type="Texture" id=10]
[ext_resource path="res://Assets/Menu/BackGround/menu2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Menu/BackGround/menu1.png" type="Texture" id=12]
[ext_resource path="res://Assets/Menu/BackGround/menu5.png" type="Texture" id=13]
[ext_resource path="res://Assets/Menu/BackGround/menu10.png" type="Texture" id=14]
[ext_resource path="res://Assets/Menu/Commands/Menu1.png" type="Texture" id=15]
[ext_resource path="res://Assets/Menu/Commands/Menu3.png" type="Texture" id=16]
[ext_resource path="res://Assets/Menu/Commands/Menu2.png" type="Texture" id=17]
[ext_resource path="res://GUI/Black.tscn" type="PackedScene" id=18]
[ext_resource path="res://Menu/esc2.png" type="Texture" id=19]
[ext_resource path="res://Menu/l_r1.png" type="Texture" id=20]
[ext_resource path="res://Menu/l_r2.png" type="Texture" id=21]
[ext_resource path="res://Menu/esc1.png" type="Texture" id=22]
[ext_resource path="res://Assets/Player/GUI/Note.png" type="Texture" id=23]
[ext_resource path="res://Assets/Player/GUI/NoteRight.png" type="Texture" id=24]
[ext_resource path="res://Assets/Music/MenuLoop.mp3" type="AudioStream" id=25]
[ext_resource path="res://Assets/Sounds/Menu/Change.wav" type="AudioStream" id=26]
[ext_resource path="res://Assets/Menu/Reset1.png" type="Texture" id=27]
[ext_resource path="res://Assets/Menu/Reset2.png" type="Texture" id=28]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.223529, 0.223529, 0.223529, 1 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.137255, 0.137255, 0.137255, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.133333, 0.160784, 0.262745, 1 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.0941176, 0.0784314, 0.145098, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.458824, 0.494118, 0.603922, 1 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.0941176, 0.0784314, 0.145098, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/styles/disabled = SubResource( 8 )
Button/styles/hover = SubResource( 6 )
Button/styles/normal = ExtResource( 3 )
Button/styles/pressed = SubResource( 7 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="Shader" id=16]
code = "shader_type canvas_item;
void fragment(){
	vec4 color=texture(SCREEN_TEXTURE,SCREEN_UV,1.0);
	COLOR=color;
	
}"

[sub_resource type="ShaderMaterial" id=15]
shader = SubResource( 16 )

[sub_resource type="DynamicFont" id=10]
size = 64
outline_color = Color( 0.0470588, 0.054902, 0.101961, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Theme" id=2]

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 5 )
script = ExtResource( 4 )

[node name="CanvasLayer" parent="." instance=ExtResource( 18 )]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 10, 10 )
z_index = -1
frames = SubResource( 9 )
frame = 3
playing = true
centered = false

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.654902, 0.654902, 0.654902, 1 )
material = SubResource( 15 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )

[node name="Menu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Sprite" type="Sprite" parent="Menu"]
position = Vector2( 640, 365 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = 530.0
margin_top = 157.0
margin_right = 750.0
margin_bottom = 563.0

[node name="Label" type="Label" parent="Menu/VBoxContainer"]
modulate = Color( 0.0941176, 0.0784314, 0.145098, 1 )
margin_right = 220.0
margin_bottom = 64.0
theme = SubResource( 11 )
text = "Project L"
align = 1

[node name="Control" type="Control" parent="Menu/VBoxContainer"]
margin_top = 68.0
margin_right = 220.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 10 )

[node name="Resume" type="Button" parent="Menu/VBoxContainer"]
margin_top = 82.0
margin_right = 220.0
margin_bottom = 160.0
rect_min_size = Vector2( 75, 0 )
text = "Resume"

[node name="Reset" type="Button" parent="Menu/VBoxContainer"]
margin_top = 164.0
margin_right = 220.0
margin_bottom = 242.0
rect_min_size = Vector2( 75, 0 )
text = "Reset"

[node name="Options" type="Button" parent="Menu/VBoxContainer"]
margin_top = 246.0
margin_right = 220.0
margin_bottom = 324.0
rect_min_size = Vector2( 75, 0 )
text = "Options"

[node name="Quit" type="Button" parent="Menu/VBoxContainer"]
margin_top = 328.0
margin_right = 220.0
margin_bottom = 406.0
rect_min_size = Vector2( 75, 0 )
text = "Quit"

[node name="AnimatedSprite" type="AnimatedSprite" parent="Menu"]
visible = false
position = Vector2( 642, 374 )
z_index = 1
frames = SubResource( 17 )
playing = true

[node name="Options" type="CenterContainer" parent="."]
anchor_left = 1.0
anchor_right = 2.0
anchor_bottom = 1.0

[node name="Sprite2" type="Sprite" parent="Options"]
position = Vector2( 640, 365 )
scale = Vector2( 1.06989, 1 )
texture = ExtResource( 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="Options"]
margin_left = 499.0
margin_top = 157.0
margin_right = 781.0
margin_bottom = 563.0
alignment = 1

[node name="Options" type="Label" parent="Options/VBoxContainer2"]
margin_right = 282.0
margin_bottom = 64.0
theme = SubResource( 2 )
text = "Options"
align = 1

[node name="Control" type="Control" parent="Options/VBoxContainer2"]
margin_top = 68.0
margin_right = 282.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 10 )

[node name="Controls" type="Button" parent="Options/VBoxContainer2"]
margin_top = 82.0
margin_right = 282.0
margin_bottom = 160.0
text = "Controls"
icon_align = 1

[node name="FullScreen" type="CheckBox" parent="Options/VBoxContainer2"]
margin_top = 164.0
margin_right = 282.0
margin_bottom = 242.0
text = "FullScreen"
align = 1
icon_align = 1

[node name="Music" type="CheckBox" parent="Options/VBoxContainer2"]
margin_top = 246.0
margin_right = 282.0
margin_bottom = 324.0
pressed = true
text = "Music"
align = 1
icon_align = 1

[node name="Support" type="CheckBox" parent="Options/VBoxContainer2"]
margin_top = 328.0
margin_right = 282.0
margin_bottom = 406.0
pressed = true
text = "Fog"
align = 1
icon_align = 1

[node name="Left" type="Sprite" parent="Options"]
position = Vector2( -1240, 112 )
texture = ExtResource( 23 )
centered = false

[node name="Right" type="Sprite" parent="Options"]
position = Vector2( -412, 112 )
texture = ExtResource( 24 )
centered = false

[node name="Controls" type="CenterContainer" parent="."]
anchor_left = 1.0
anchor_right = 2.0
anchor_bottom = 1.0

[node name="Control3" type="CenterContainer" parent="Controls"]
margin_left = 640.0
margin_top = 360.0
margin_right = 640.0
margin_bottom = 360.0

[node name="Sprite" type="Sprite" parent="Controls/Control3"]
texture = ExtResource( 16 )

[node name="Control2" type="CenterContainer" parent="Controls"]
margin_left = 640.0
margin_top = 360.0
margin_right = 640.0
margin_bottom = 360.0

[node name="Menu2" type="Sprite" parent="Controls/Control2"]
texture = ExtResource( 17 )

[node name="Control1" type="CenterContainer" parent="Controls"]
margin_left = 640.0
margin_top = 360.0
margin_right = 640.0
margin_bottom = 360.0

[node name="Menu1" type="Sprite" parent="Controls/Control1"]
texture = ExtResource( 15 )

[node name="HBoxContainer" type="HBoxContainer" parent="Controls"]
margin_left = 640.0
margin_top = 360.0
margin_right = 640.0
margin_bottom = 360.0

[node name="CenterContainer3" type="CenterContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TweenIn" type="Tween" parent="."]

[node name="TweenOut" type="Tween" parent="."]

[node name="Label" type="AnimatedSprite" parent="."]
position = Vector2( 1195, 670 )
scale = Vector2( 7, 7 )
frames = SubResource( 12 )
playing = true

[node name="Label2" type="AnimatedSprite" parent="."]
position = Vector2( 1005, 670 )
scale = Vector2( 7, 7 )
frames = SubResource( 13 )
frame = 1
playing = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )
volume_db = -10.0
pitch_scale = 0.25

[connection signal="pressed" from="Menu/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Options/VBoxContainer2/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="Options/VBoxContainer2/FullScreen" to="." method="_on_FullScreen_pressed"]
[connection signal="pressed" from="Options/VBoxContainer2/Music" to="." method="_on_Music_pressed"]
[connection signal="pressed" from="Options/VBoxContainer2/Support" to="." method="_on_Support_pressed"]
